# python_signature_manager

./: .env.example  DOCKER_README.md  README.md  docker-compose.yml  requirements.txt  tmp_run_check.py
CsharpRequest/: Dockerfile  Program.cs  PurchaseRequestsService.csproj  PurchaseRequestsService.sln  README.md  appsettings.json  docker-compose.yml
CsharpRequest/Infrastructure/: ConsulOptions.cs  ConsulRegistrationHostedService.cs
CsharpRequest/Integrations/: CapitaliaApprovalClient.cs  JwtServiceClient.cs  JwtServiceOptions.cs
CsharpRequest/Models/: PurchaseRequestLine.cs
capitalia/: .env.example  GOF_SPEC.md  config.py  main.py
capitalia/adapters/: jwt_auth.py  (+1 more)
jwt_service/: README.md  __init__.py  config.py  main.py  server.py  tokens.py
router/: __init__.py  router.py
scripts/: bootstrap_service_env.py
services/: __init__.py
services/capitalia/: .env.example  Dockerfile  Makefile  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
services/capitalia/adapters/: __init__.py  jwt_auth.py  mysql_repo.py  sqlite_repo.py
services/capitalia/app/: __init__.py  auth_strategies.py  handlers.py
services/capitalia/domain/: __init__.py  errors.py  services.py  user_states.py
services/capitalia/ports/: __init__.py  clock.py  repositories.py
services/capitalia/scripts/: init_mysql.sql  init_sqlite.py  seed_mysql.sql  seed_sqlite.py
services/router/: Dockerfile  pyproject.toml  requirements.txt  router.py
tests/: test_config_ports.py  test_domain.py  test_head_handler.py  test_http_flow_sqlite.py  test_routing_numeric_uid.py
(+29 files in other folders)
