[project]
name = "capitalia-service"
version = "0.1.0"
description = "Capitalia subscription management service"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "../.."}

[tool.setuptools.packages.find]
include = ["services", "services.capitalia*"]
