[project]
name = "router-service"
version = "0.1.0"
description = "HTTP proxy that fronts backend services"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "../.."}

[tool.setuptools.packages.find]
include = ["services", "services.router*", "libs", "libs.python*"]
